# naver-gr-intelligence

./: README.md  bills.json  cloudflare-worker.js  gr-directory (1).html  gr-directory.html  gr-map.html  index.html  issues.json  members.json  summit_dashboard.html  summit_data_kr_2021_2026.json  summit_research_kr_2021_2026.md
legi-ai/: .env.example  .env.prod.example  .gitignore  Caddyfile  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
legi-ai/data/eval/: golden_set_template.csv
legi-ai/docs/: DEPLOYMENT.md
legi-ai/scripts/: backup_qdrant.sh  deploy.sh  init_qdrant.py  setup.sh
legi-ai/src/legi_ai/: __init__.py  config.py  logging.py
legi-ai/src/legi_ai/agents/: __init__.py  bill_analyst.py  common.py  issue_tracker.py  member_profiler.py  supervisor.py
legi-ai/src/legi_ai/api/: __init__.py  main.py
legi-ai/src/legi_ai/evaluation/: __init__.py  ragas_eval.py
legi-ai/src/legi_ai/ingestion/: __init__.py  assembly_api.py  law_api.py  normalizer.py
legi-ai/src/legi_ai/mcp/: __init__.py  claude_desktop_config.example.json  server.py
legi-ai/src/legi_ai/rag/: __init__.py  cache.py  indexer.py  query_engine.py  query_logger.py
legi-ai/tests/: test_smoke.py
legi-ai/web/: ai-panel.js
