[project]
name = "legi-ai"
version = "0.1.0"
description = "AI-powered legislative intelligence platform for Naver GR"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Naver GR Intelligence" }]

dependencies = [
    "anthropic>=0.40.0",
    "llama-index>=0.12.0",
    "llama-index-vector-stores-qdrant>=0.4.0",
    "llama-index-embeddings-voyageai>=0.3.0",
    "llama-index-llms-anthropic>=0.6.0",
    "llama-index-retrievers-bm25>=0.5.0",
    "langgraph>=0.2.50",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=0.3.0",
    "ragas>=0.2.0",
    "qdrant-client>=1.12.0",
    "voyageai>=0.3.0",
    "httpx>=0.27.0",
    "tenacity>=9.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.67.0",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "networkx>=3.4.0",
    "apscheduler>=3.10.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    "sse-starlette>=2.1.0",
    "redis>=5.2.0",
    "mcp>=1.0.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "ipykernel>=6.29.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/legi_ai"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
